added instructions to turn geolocation on; changed getCurrentPosition for watchPosition to maintain the user's position. Added a Service for Geolocation

--- a/web/test/SpecRunner.html
+++ b/web/test/SpecRunner.html
@@ -23,14 +23,17 @@
 
     <script src="/scripts/main.js"></script>
     <script src="/scripts/SalonService.js"></script>
+    <script src="/scripts/Geolocation.js"></script>
     <script src="/scripts/controllers/salons-list.js"></script>
     <script src="/scripts/controllers/map.js"></script>
+    <script src="/scripts/controllers/main.js"></script>
 
     <!-- angular mock is used only by test -->
     <script type="text/javascript" src="/bower_components/angular-mocks/angular-mocks.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/salon-service-spec.js"></script>
+    <script type="text/javascript" src="spec/geolocation-spec.js"></script>
 
 </head>
 
