--- a/web/test/SpecRunner.html
+++ b/web/test/SpecRunner.html
@@ -19,6 +19,8 @@
     <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
     <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src='/bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
 
     <script src="/scripts/main.js"></script>
